5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1723_2506.log
== TEST (2019-05-09 17:17:24) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
qa=qt
t=0
ptint(pc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptint(pc)
NameError: name 'ptint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:17:39) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
qa=qt
t=0
print(pc)
-- OUTPUT:
0.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:23:30) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
qa=qt
t=0
while qt>0 and qt<=12000:
	tn=qa+(qa*pc)
	tm=qa-qtv
	qt=tn-tm
	t=t+1
if qt=0:
	print("EXTINCAO")
elif qt=1200:
	print("LIMITE")
print(t)
-- ERROR:
File "XXXX", line 11
    if qt=0:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:23:46) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
qa=qt
t=0
while qt>0 and qt<=12000:
	tn=qa+(qa*pc)
	tm=qa-qtv
	qt=tn-tm
	t=t+1
if qt==0:
	print("EXTINCAO")
elif qt==1200:
	print("LIMITE")
print(t)
-- ERROR:
File "XXXX", line 11
    if qt=0:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:24:50) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
qa=qt
t=0
while qt>0 and qt<=12000:
	tn=qa+(qa*pc)
	tm=qa-qtv
	qt=tn-tm
	t=t+1
print(qt)
if qt==0:
	print("EXTINCAO")
elif qt==1200:
	print("LIMITE")
print(t)
-- ERROR:
File "XXXX", line 11
    if qt=0:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:24:55) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
qa=qt
t=0
while qt>0 and qt<=12000:
	tn=qa+(qa*pc)
	tm=qa-qtv
	qt=tn-tm
	t=t+1
print(qt)
if qt==0:
	print("EXTINCAO")
elif qt==1200:
	print("LIMITE")
print(t)
-- ERROR:
File "XXXX", line 11
    if qt=0:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:25:11) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
qa=qt
t=0
while qt>0 and qt<=12000:
	tn=qa+(qa*pc)
	tm=qa-qtv
	qt=tn-tm
	t=t+1
print(qt)

-- ERROR:
File "XXXX", line 11
    if qt=0:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:32:38) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
aa=qt
t=0
while qt>0 and qt<=12000:
	aa=aa+(aa*pc)
	qt=aa-qtv
	t=t+1
print(qt)

-- OUTPUT:
12557.575934413371
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:32:47) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
aa=qt
t=0
while qt>0 and qt<=12000:
	aa=aa+(aa*pc)
	qt=aa-qtv
	t=t+1
print(qt)

-- OUTPUT:
12557.575934413371
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:33:26) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
aa=qt
t=0
while qt>0 and qt<=12000:
	aa=aa+(aa*pc)
	qt=aa-qtv
	t=t+1
print(qt)
print(t)

-- OUTPUT:
12557.575934413371
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:35:50) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
aa=qt
t=0
while qt>0 and qt<=12000:
	aa=aa+(aa*pc)
	qt=aa-qtv
	t=t+1
	print(qt)
	print(t)

-- OUTPUT:
1173.04
1
1251.5224
2
1334.7137440000001
3
1422.8965686400002
4
1516.3703627584002
5
1615.4525845239043
6
1720.4797395953385
7
1831.8085239710588
8
1949.8170354093222
9
2074.9060575338817
10
2207.5004209859144
11
2348.0504462450695
12
2497.0334730197737
13
2654.9554814009603
14
2822.3528102850178
15
2999.793978902119
16
3187.881617636246
17
3387.254514694421
18
3598.589785576086
19
3822.605172710651
20
4060.06148307329
21
4311.765172057688
22
4578.571082381149
23
4861.385347324018
24
5161.168468163459
25
5478.938576253267
26
5815.774890828463
27
6172.821384278171
28
6551.290667334861
29
6952.4681073749525
30
7377.7161938174495
31
7828.479165446496
32
8306.287915373287
33
8812.765190295684
34
9349.631101713425
35
9918.70896781623
36
10521.931505885204
37
11161.347396238316
38
11839.128240012615
39
12557.575934413371
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:40:09) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
at=qt
t=0
while qt>0 and qt<=12000:
	at=at+(at*pc)
	qt=at-qtv
	t=t+1
	print(qt)
	print(t)

-- OUTPUT:
1173.04
1
1251.5224
2
1334.7137440000001
3
1422.8965686400002
4
1516.3703627584002
5
1615.4525845239043
6
1720.4797395953385
7
1831.8085239710588
8
1949.8170354093222
9
2074.9060575338817
10
2207.5004209859144
11
2348.0504462450695
12
2497.0334730197737
13
2654.9554814009603
14
2822.3528102850178
15
2999.793978902119
16
3187.881617636246
17
3387.254514694421
18
3598.589785576086
19
3822.605172710651
20
4060.06148307329
21
4311.765172057688
22
4578.571082381149
23
4861.385347324018
24
5161.168468163459
25
5478.938576253267
26
5815.774890828463
27
6172.821384278171
28
6551.290667334861
29
6952.4681073749525
30
7377.7161938174495
31
7828.479165446496
32
8306.287915373287
33
8812.765190295684
34
9349.631101713425
35
9918.70896781623
36
10521.931505885204
37
11161.347396238316
38
11839.128240012615
39
12557.575934413371
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:45:48) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
at=0
t=0
tn=(qt+(qt*pc))-qtv
while qt>0 and qt<=12000:
	at=at+tn
	tn=(at+(at*pc))-qtv
	t=t+1
	print(qt)
	print(t)

-- OUTPUT:
1234
1
1234
2
1234
3
1234
4
1234
5
1234
6
1234
7
1234
8
1234
9
1234
10
1234
11
1234
12
1234
13
1234
14
1234
15
1234
16
1234
17
1234
18
1234
19
1234
20
1234
21
1234
22
1234
23
1234
24
1234
25
1234
26
1234
27
1234
28
1234
29
1234
30
1234
31
1234
32
1234
33
1234
34
1234
35
1234
36
1234
37
1234
38
1234
39
1234
40
1234
41
1234
42
1234
43
1234
44
1234
45
1234
46
1234
47
1234
48
1234
49
1234
50
1234
51
1234
52
1234
53
1234
54
1234
55
1234
56
1234
57
1234
58
1234
59
1234
60
1234
61
1234
62
1234
63
1234
64
1234
65
1234
66
1234
67
1234
68
1234
69
1234
70
1234
71
1234
72
1234
73
1234
74
1234
75
1234
76
1234
77
1234
78
1234
79
1234
80
1234
81
1234
82
1234
83
1234
84
1234
85
1234
86
1234
87
1234
88
1234
89
1234
90
1234
91
1234
92
1234
93
1234
94
1234
95
1234
96
1234
97
1234
98
1234
99
1234
100
1234
101
1234
102
1234
103
1234
104
1234
105
1234
106
1234
107
1234
108
1234
109
1234
110
1234
111
1234
112
1234
113
1234
114
1234
115
1234
116
1234
117
1234
118
1234
119
1234
120
1234
121
1234
122
1234
123
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 20:02:39) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
at=0
t=0
tn=(qt+(qt*pc))-qtv
while qt>0 and qt<=12000:
	at=at+tn
	tn=(at+(at*pc))-qtv
	t=t+1
	print(qt)
	print(t)

-- OUTPUT:
1234
1
1234
2
1234
3
1234
4
1234
5
1234
6
1234
7
1234
8
1234
9
1234
10
1234
11
1234
12
1234
13
1234
14
1234
15
1234
16
1234
17
1234
18
1234
19
1234
20
1234
21
1234
22
1234
23
1234
24
1234
25
1234
26
1234
27
1234
28
1234
29
1234
30
1234
31
1234
32
1234
33
1234
34
1234
35
1234
36
1234
37
1234
38
1234
39
1234
40
1234
41
1234
42
1234
43
1234
44
1234
45
1234
46
1234
47
1234
48
1234
49
1234
50
1234
51
1234
52
1234
53
1234
54
1234
55
1234
56
1234
57
1234
58
1234
59
1234
60
1234
61
1234
62
1234
63
1234
64
1234
65
1234
66
1234
67
1234
68
1234
69
1234
70
1234
71
1234
72
1234
73
1234
74
1234
75
1234
76
1234
77
1234
78
1234
79
1234
80
1234
81
1234
82
1234
83
1234
84
1234
85
1234
86
1234
87
1234
88
1234
89
1234
90
1234
91
1234
92
1234
93
1234
94
1234
95
1234
96
1234
97
1234
98
1234
99
1234
100
1234
101
1234
102
1234
103
1234
104
1234
105
1234
106
1234
107
1234
108
1234
109
1234
110
1234
111
1234
112
1234
113
1234
114
1234
115
1234
116
1234
117
1234
118
1234
119
1234
120
1234
121
1234
122
1234
123
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 20:18:01) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
at=qt
t=0
tn=0
while qt>0 and qt<=12000:
	qt=at+tn
	tn=((qt+(qt*pc))-200)
	t=t+1
	print(qt)
	print(t)

-- OUTPUT:
1234
1
2342.04
2
3516.5624
3
4761.556144
4
6081.24951264
5
7480.1244833984
6
8962.931952402305
7
10534.707869546442
8
12200.790341719228
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 20:28:05) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
at=qt
t=0
tn=0
while qt>0 and qt<=12000:
	qt=at+tn
	tn=((qt*pc)-200)
	t=t+1
	print(qt)
	print(t)

-- OUTPUT:
1234
1
1108.04
2
1100.4823999999999
3
1100.028944
4
1100.00173664
5
1100.0001041984
6
1100.0000062519039
7
1100.0000003751143
8
1100.0000000225068
9
1100.0000000013504
10
1100.000000000081
11
1100.0000000000048
12
1100.0000000000002
13
1100.0
14
1100.0
15
1100.0
16
1100.0
17
1100.0
18
1100.0
19
1100.0
20
1100.0
21
1100.0
22
1100.0
23
1100.0
24
1100.0
25
1100.0
26
1100.0
27
1100.0
28
1100.0
29
1100.0
30
1100.0
31
1100.0
32
1100.0
33
1100.0
34
1100.0
35
1100.0
36
1100.0
37
1100.0
38
1100.0
39
1100.0
40
1100.0
41
1100.0
42
1100.0
43
1100.0
44
1100.0
45
1100.0
46
1100.0
47
1100.0
48
1100.0
49
1100.0
50
1100.0
51
1100.0
52
1100.0
53
1100.0
54
1100.0
55
1100.0
56
1100.0
57
1100.0
58
1100.0
59
1100.0
60
1100.0
61
1100.0
62
1100.0
63
1100.0
64
1100.0
65
1100.0
66
1100.0
67
1100.0
68
1100.0
69
1100.0
70
1100.0
71
1100.0
72
1100.0
73
1100.0
74
1100.0
75
1100.0
76
1100.0
77
1100.0
78
1100.0
79
1100.0
80
1100.0
81
1100.0
82
1100.0
83
1100.0
84
1100.0
85
1100.0
86
1100.0
87
1100.0
88
1100.0
89
1100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:26:20) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
at=0
t=0
while qt>0 and qt<=12000:
	at=at+qt
	qt=at+(at*pc)-200
	t=t+1
	print(qt)
	print(t)

-- OUTPUT:
1108.04
1
2282.5624
2
4702.078544
3
9686.28180064
4
19953.7405093184
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:27:42) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
at=0
t=0
while qt>0 and qt<=12000:
	at=at+qt
	qt=at+(at*pc)-200
	t=t+1
	print(at)
	print(t)
-- OUTPUT:
1234
1
2342.04
2
4624.6024
3
9326.680944
4
19012.962744639997
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:47:16) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
ta=0
t=0
while qt>0 and qt<=12000:
	qt=qt+ta
	ta=((qt+(qt*pc))-qtv)
	t=t+1
	print(at)
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(at)
NameError: name 'at' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:48:18) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
ta=0
t=0
while qt>0 and qt<=12000:
	qt=qt+ta
	t=t+1
	ta=((qt+(qt*pc))-qtv)
	print(at)
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(at)
NameError: name 'at' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:48:36) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
ta=0
t=0
while qt>0 and qt<=12000:
	qt=qt+ta
	t=t+1
	ta=((qt+(qt*pc))-qtv)
	print(qt)
	print(t)
-- OUTPUT:
1234
1
2407.04
2
4823.502399999999
3
9801.414943999998
4
20055.914784639994
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:49:13) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
ta=0
t=0
while qt>0 and qt<=12000:
	qt=qt+ta
	t=t+1
	ta=((qt*pc)-qtv)
	print(qt)
	print(t)
-- OUTPUT:
1234
1
1173.04
2
1108.4224
3
1039.9277439999998
4
967.3234086399998
5
890.3628131583998
6
808.7845819479038
7
722.311656864778
8
630.6503562766646
9
533.4893776532645
10
430.4987403124603
11
321.32866473120794
12
205.6083846150804
13
82.94488769198523
14
-47.07841904649567
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:22:49) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
ta=0
t=0
while qt>0 and qt<=12000:
	qt=qt+ta
	t=t+1
	ta=((qt*pc)-qtv)
if qt<=0:
	print("EXTINCAO")
elif qt>=12000:
	print("LIMITE")
print(t)
-- OUTPUT:
EXTINCAO
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:23:12) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
ta=0
t=1
while qt>0 and qt<=12000:
	qt=qt+ta
	t=t+1
	ta=((qt*pc)-qtv)
if qt<=0:
	print("EXTINCAO")
elif qt>=12000:
	print("LIMITE")
print(t)
-- OUTPUT:
EXTINCAO
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:24:00) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
ta=0
t=0
while qt>0 and qt<=12000:
	qt=qt+ta
	t=t+1
	ta=((qt*pc)-qtv)
if qt<=0:
	print("EXTINCAO")
elif qt>=12000:
	print("LIMITE")
print(t)
-- OUTPUT:
EXTINCAO
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 23:24:28) 
-- CODE:
qt= int(input("insira a quantidade inicial de tambaquis no tanque: "))
pc= int(input("insira o percentul de crescimento anual de tambaquis: "))/100
qtv=int(input("insira a quantidade de tambaquis retiradas todos os anos para venda: "))
ta=0
t=0
while qt>0 and qt<=12000:
	qt=qt+ta
	t=t+1
	ta=((qt*pc)-qtv)
if qt<=0:
	print("EXTINCAO")
elif qt>=12000:
	print("LIMITE")
print(t-1)
-- EXECUTION TIME:
0.185215
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
